--- a/alphapwd/style.css
+++ b/alphapwd/style.css
@@ -97,7 +97,7 @@ button:enabled:hover {
     color: white;
 }
 
-#slideText {
+p {
     color: white;
     margin-right: 15px;
     font-size: 0.9vw;
@@ -110,4 +110,32 @@ div#preloaded-images {
     top: -9999px;
     height: 1px;
     width: 1px;
- }
+}
+
+meter {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  
+    margin: 0.5em none;
+    width: 50%;
+    height: 0.5em;
+  
+    background: none;
+    background-color: rgba(255, 255, 255, 0.3);
+  }
+  
+  meter::-webkit-meter-bar {
+    background: none;
+    background-color: rgba(255, 255, 255, 0.3);
+  }
+
+meter[value="1"]::-webkit-meter-optimum-value { background: red; }
+meter[value="2"]::-webkit-meter-optimum-value { background: yellow; }
+meter[value="3"]::-webkit-meter-optimum-value { background: orange; }
+meter[value="4"]::-webkit-meter-optimum-value { background: green; }
+
+meter[value="1"]::-moz-meter-bar { background: red; }
+meter[value="2"]::-moz-meter-bar { background: yellow; }
+meter[value="3"]::-moz-meter-bar { background: orange; }
+meter[value="4"]::-moz-meter-bar { background: green; }
